# CompilerProject

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README-DEPLOYMENT.md  README.md  ast_test_1.dot  ast_test_2.dot  ast_test_3.dot  ast_test_4.dot  ast_test_5.dot  ast_test_6.dot  ast_test_7.dot  ast_test_8.dot  docker-compose.yml  start-dev.sh
compiler_core/: Cargo.toml
compiler_core/src/: ast.rs  graphviz.rs  lib.rs  parser.rs
compiler_core/src/lexer/: lexer.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ASTVisualization.tsx  CodeEditor.tsx  SemanticAnalysis.tsx  TokenDisplay.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: main.rs
